--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -12,8 +12,8 @@
     </p>
     <h3>What are you looking for?</h3>
     <ul class="nav-list">
-        <li><a class="nav-link" asp-area="" asp-page="/Business">   Business    </a></li>
-        <li><a class="nav-link" asp-area="" asp-page="/Gaming">     Gaming      </a></li>
-        <li><a class="nav-link" asp-area="" asp-page="/Projects">   Projects    </a></li>
+        <li><a class="nav-link" asp-area="" asp-page="/DavidN/Business">   Business    </a></li>
+        <li><a class="nav-link" asp-area="" asp-page="/DavidN/Gaming">     Gaming      </a></li>
+        <li><a class="nav-link" asp-area="" asp-page="/DavidN/Projects">   Projects    </a></li>
     </ul>
 </div>
