--- a/wwwroot/css/light.css
+++ b/wwwroot/css/light.css
@@ -99,10 +99,12 @@ body {
 
 @media (min-width: 768px) {
 .dropdown-list {
-  display: none;
+  display: none;  
   position: absolute;
-  background-color: #ddd;
+  background-color: inherit;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  border: solid black 1px;
+  border-radius: 3px;
   min-width: 160px;
   z-index: 1;
 
